# snoyman-webapps

./: .gitignore  .gitlab-ci.yml  .gitmodules  deploy.sh  stack.yaml
docker/: Dockerfile  build-docker.sh
kube/: deployment.yaml  rc.yaml  service.yaml
warp-vhost/: README.md  stack.yaml  warp-vhost.cabal
warp-vhost/src/: Main.hs
webapps/: webapps.cabal
webapps/config/: webapps.yaml
webapps/src/: Main.hs
