name:                warp-vhost
version:             0.1.0.0
synopsis:            Simple Warp-based executable for doing virtual host dispatch
description:         Please see README.md
homepage:            http://github.com/snoyberg/warp-vhost#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable warp-vhost
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , http-reverse-proxy
                     , text
                     , bytestring
                     , unordered-containers
                     , http-client
                     , http-types
