name:                webapps
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
copyright:           2015 Michael Snoyman
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable webapps
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , yaml
                     , wai
                     , http-types
                     , warp
                     , http-reverse-proxy
                     , process
                     , async
                     , text
                     , bytestring
                     , streaming-commons
                     , network
                     , unordered-containers
                     , http-client
